ProcesseurXML/xsl.output
Grammaire

    0 $accept: main $end

    1 main: document

    2 document: prolog element miscs

    3 element: INF NOM attributes SUP content INF SLASH NOM SUP
    4        | INF XSL COLON NOM attributes SUP content INF SLASH XSL COLON NOM SUP
    5        | INF XSL COLON NOM attributes SLASH SUP

    6 content: content element
    7        | content cdsect
    8        | content misc
    9        | content DONNEES
   10        | /* vide */

   11 attributes: attributes attribute
   12           | /* vide */

   13 attribute: NOM EGAL VALEUR
   14          | NOM COLON NOM EGAL VALEUR

   15 doctypedecl: DOCTYPE NOM NOM SUP
   16            | DOCTYPE NOM SUP

   17 prolog: xmldecl miscs doctypedecl miscs
   18       | xmldecl miscs

   19 xmldecl: INFSPECIAL NOM attributes SUPSPECIAL

   20 miscs: miscs misc
   21      | /* vide */

   22 misc: COMMENT
   23     | pi

   24 pi: INFSPECIAL NOM attributes SUPSPECIAL

   25 cdsect: CDATABEGIN CDATAEND


Terminaux, suivis des règles où ils apparaissent

$end (0) 0
error (256)
EGAL (258) 13 14
SLASH (259) 3 4 5
SUP (260) 3 4 5 15 16
SUPSPECIAL (261) 19 24
DOCTYPE (262) 15 16
COLON (263) 4 5 14
INFSPECIAL (264) 19 24
INF (265) 3 4 5
CDATABEGIN (266) 25
VALEUR (267) 13 14
DONNEES (268) 9
COMMENT (269) 22
NOM (270) 3 4 5 13 14 15 16 19 24
CDATAEND (271) 25
XSL (272) 4 5


Non-terminaux, suivis des règles où ils apparaissent

$accept (18)
    à gauche: 0
main (19)
    à gauche: 1, à droite: 0
document (20)
    à gauche: 2, à droite: 1
element (21)
    à gauche: 3 4 5, à droite: 2 6
content (22)
    à gauche: 6 7 8 9 10, à droite: 3 4 6 7 8 9
attributes (23)
    à gauche: 11 12, à droite: 3 4 5 11 19 24
attribute (24)
    à gauche: 13 14, à droite: 11
doctypedecl (25)
    à gauche: 15 16, à droite: 17
prolog (26)
    à gauche: 17 18, à droite: 2
xmldecl (27)
    à gauche: 19, à droite: 17 18
miscs (28)
    à gauche: 20 21, à droite: 2 17 18 20
misc (29)
    à gauche: 22 23, à droite: 8 20
pi (30)
    à gauche: 24, à droite: 23
cdsect (31)
    à gauche: 25, à droite: 7


état 0

    0 $accept: . main $end

    INFSPECIAL  décalage et aller à l'état 1

    main      aller à l'état 2
    document  aller à l'état 3
    prolog    aller à l'état 4
    xmldecl   aller à l'état 5


état 1

   19 xmldecl: INFSPECIAL . NOM attributes SUPSPECIAL

    NOM  décalage et aller à l'état 6


état 2

    0 $accept: main . $end

    $end  décalage et aller à l'état 7


état 3

    1 main: document .

    $défaut  réduction par utilisation de la règle 1 (main)


état 4

    2 document: prolog . element miscs

    INF  décalage et aller à l'état 8

    element  aller à l'état 9


état 5

   17 prolog: xmldecl . miscs doctypedecl miscs
   18       | xmldecl . miscs

    $défaut  réduction par utilisation de la règle 21 (miscs)

    miscs  aller à l'état 10


état 6

   19 xmldecl: INFSPECIAL NOM . attributes SUPSPECIAL

    $défaut  réduction par utilisation de la règle 12 (attributes)

    attributes  aller à l'état 11


état 7

    0 $accept: main $end .

    $défaut  accepter


état 8

    3 element: INF . NOM attributes SUP content INF SLASH NOM SUP
    4        | INF . XSL COLON NOM attributes SUP content INF SLASH XSL COLON NOM SUP
    5        | INF . XSL COLON NOM attributes SLASH SUP

    NOM  décalage et aller à l'état 12
    XSL  décalage et aller à l'état 13


état 9

    2 document: prolog element . miscs

    $défaut  réduction par utilisation de la règle 21 (miscs)

    miscs  aller à l'état 14


état 10

   17 prolog: xmldecl miscs . doctypedecl miscs
   18       | xmldecl miscs .
   20 miscs: miscs . misc

    DOCTYPE     décalage et aller à l'état 15
    INFSPECIAL  décalage et aller à l'état 16
    COMMENT     décalage et aller à l'état 17

    $défaut  réduction par utilisation de la règle 18 (prolog)

    doctypedecl  aller à l'état 18
    misc         aller à l'état 19
    pi           aller à l'état 20


état 11

   11 attributes: attributes . attribute
   19 xmldecl: INFSPECIAL NOM attributes . SUPSPECIAL

    SUPSPECIAL  décalage et aller à l'état 21
    NOM         décalage et aller à l'état 22

    attribute  aller à l'état 23


état 12

    3 element: INF NOM . attributes SUP content INF SLASH NOM SUP

    $défaut  réduction par utilisation de la règle 12 (attributes)

    attributes  aller à l'état 24


état 13

    4 element: INF XSL . COLON NOM attributes SUP content INF SLASH XSL COLON NOM SUP
    5        | INF XSL . COLON NOM attributes SLASH SUP

    COLON  décalage et aller à l'état 25


état 14

    2 document: prolog element miscs .
   20 miscs: miscs . misc

    INFSPECIAL  décalage et aller à l'état 16
    COMMENT     décalage et aller à l'état 17

    $défaut  réduction par utilisation de la règle 2 (document)

    misc  aller à l'état 19
    pi    aller à l'état 20


état 15

   15 doctypedecl: DOCTYPE . NOM NOM SUP
   16            | DOCTYPE . NOM SUP

    NOM  décalage et aller à l'état 26


état 16

   24 pi: INFSPECIAL . NOM attributes SUPSPECIAL

    NOM  décalage et aller à l'état 27


état 17

   22 misc: COMMENT .

    $défaut  réduction par utilisation de la règle 22 (misc)


état 18

   17 prolog: xmldecl miscs doctypedecl . miscs

    $défaut  réduction par utilisation de la règle 21 (miscs)

    miscs  aller à l'état 28


état 19

   20 miscs: miscs misc .

    $défaut  réduction par utilisation de la règle 20 (miscs)


état 20

   23 misc: pi .

    $défaut  réduction par utilisation de la règle 23 (misc)


état 21

   19 xmldecl: INFSPECIAL NOM attributes SUPSPECIAL .

    $défaut  réduction par utilisation de la règle 19 (xmldecl)


état 22

   13 attribute: NOM . EGAL VALEUR
   14          | NOM . COLON NOM EGAL VALEUR

    EGAL   décalage et aller à l'état 29
    COLON  décalage et aller à l'état 30


état 23

   11 attributes: attributes attribute .

    $défaut  réduction par utilisation de la règle 11 (attributes)


état 24

    3 element: INF NOM attributes . SUP content INF SLASH NOM SUP
   11 attributes: attributes . attribute

    SUP  décalage et aller à l'état 31
    NOM  décalage et aller à l'état 22

    attribute  aller à l'état 23


état 25

    4 element: INF XSL COLON . NOM attributes SUP content INF SLASH XSL COLON NOM SUP
    5        | INF XSL COLON . NOM attributes SLASH SUP

    NOM  décalage et aller à l'état 32


état 26

   15 doctypedecl: DOCTYPE NOM . NOM SUP
   16            | DOCTYPE NOM . SUP

    SUP  décalage et aller à l'état 33
    NOM  décalage et aller à l'état 34


état 27

   24 pi: INFSPECIAL NOM . attributes SUPSPECIAL

    $défaut  réduction par utilisation de la règle 12 (attributes)

    attributes  aller à l'état 35


état 28

   17 prolog: xmldecl miscs doctypedecl miscs .
   20 miscs: miscs . misc

    INFSPECIAL  décalage et aller à l'état 16
    COMMENT     décalage et aller à l'état 17

    $défaut  réduction par utilisation de la règle 17 (prolog)

    misc  aller à l'état 19
    pi    aller à l'état 20


état 29

   13 attribute: NOM EGAL . VALEUR

    VALEUR  décalage et aller à l'état 36


état 30

   14 attribute: NOM COLON . NOM EGAL VALEUR

    NOM  décalage et aller à l'état 37


état 31

    3 element: INF NOM attributes SUP . content INF SLASH NOM SUP

    $défaut  réduction par utilisation de la règle 10 (content)

    content  aller à l'état 38


état 32

    4 element: INF XSL COLON NOM . attributes SUP content INF SLASH XSL COLON NOM SUP
    5        | INF XSL COLON NOM . attributes SLASH SUP

    $défaut  réduction par utilisation de la règle 12 (attributes)

    attributes  aller à l'état 39


état 33

   16 doctypedecl: DOCTYPE NOM SUP .

    $défaut  réduction par utilisation de la règle 16 (doctypedecl)


état 34

   15 doctypedecl: DOCTYPE NOM NOM . SUP

    SUP  décalage et aller à l'état 40


état 35

   11 attributes: attributes . attribute
   24 pi: INFSPECIAL NOM attributes . SUPSPECIAL

    SUPSPECIAL  décalage et aller à l'état 41
    NOM         décalage et aller à l'état 22

    attribute  aller à l'état 23


état 36

   13 attribute: NOM EGAL VALEUR .

    $défaut  réduction par utilisation de la règle 13 (attribute)


état 37

   14 attribute: NOM COLON NOM . EGAL VALEUR

    EGAL  décalage et aller à l'état 42


état 38

    3 element: INF NOM attributes SUP content . INF SLASH NOM SUP
    6 content: content . element
    7        | content . cdsect
    8        | content . misc
    9        | content . DONNEES

    INFSPECIAL  décalage et aller à l'état 16
    INF         décalage et aller à l'état 43
    CDATABEGIN  décalage et aller à l'état 44
    DONNEES     décalage et aller à l'état 45
    COMMENT     décalage et aller à l'état 17

    element  aller à l'état 46
    misc     aller à l'état 47
    pi       aller à l'état 20
    cdsect   aller à l'état 48


état 39

    4 element: INF XSL COLON NOM attributes . SUP content INF SLASH XSL COLON NOM SUP
    5        | INF XSL COLON NOM attributes . SLASH SUP
   11 attributes: attributes . attribute

    SLASH  décalage et aller à l'état 49
    SUP    décalage et aller à l'état 50
    NOM    décalage et aller à l'état 22

    attribute  aller à l'état 23


état 40

   15 doctypedecl: DOCTYPE NOM NOM SUP .

    $défaut  réduction par utilisation de la règle 15 (doctypedecl)


état 41

   24 pi: INFSPECIAL NOM attributes SUPSPECIAL .

    $défaut  réduction par utilisation de la règle 24 (pi)


état 42

   14 attribute: NOM COLON NOM EGAL . VALEUR

    VALEUR  décalage et aller à l'état 51


état 43

    3 element: INF . NOM attributes SUP content INF SLASH NOM SUP
    3        | INF NOM attributes SUP content INF . SLASH NOM SUP
    4        | INF . XSL COLON NOM attributes SUP content INF SLASH XSL COLON NOM SUP
    5        | INF . XSL COLON NOM attributes SLASH SUP

    SLASH  décalage et aller à l'état 52
    NOM    décalage et aller à l'état 12
    XSL    décalage et aller à l'état 13


état 44

   25 cdsect: CDATABEGIN . CDATAEND

    CDATAEND  décalage et aller à l'état 53


état 45

    9 content: content DONNEES .

    $défaut  réduction par utilisation de la règle 9 (content)


état 46

    6 content: content element .

    $défaut  réduction par utilisation de la règle 6 (content)


état 47

    8 content: content misc .

    $défaut  réduction par utilisation de la règle 8 (content)


état 48

    7 content: content cdsect .

    $défaut  réduction par utilisation de la règle 7 (content)


état 49

    5 element: INF XSL COLON NOM attributes SLASH . SUP

    SUP  décalage et aller à l'état 54


état 50

    4 element: INF XSL COLON NOM attributes SUP . content INF SLASH XSL COLON NOM SUP

    $défaut  réduction par utilisation de la règle 10 (content)

    content  aller à l'état 55


état 51

   14 attribute: NOM COLON NOM EGAL VALEUR .

    $défaut  réduction par utilisation de la règle 14 (attribute)


état 52

    3 element: INF NOM attributes SUP content INF SLASH . NOM SUP

    NOM  décalage et aller à l'état 56


état 53

   25 cdsect: CDATABEGIN CDATAEND .

    $défaut  réduction par utilisation de la règle 25 (cdsect)


état 54

    5 element: INF XSL COLON NOM attributes SLASH SUP .

    $défaut  réduction par utilisation de la règle 5 (element)


état 55

    4 element: INF XSL COLON NOM attributes SUP content . INF SLASH XSL COLON NOM SUP
    6 content: content . element
    7        | content . cdsect
    8        | content . misc
    9        | content . DONNEES

    INFSPECIAL  décalage et aller à l'état 16
    INF         décalage et aller à l'état 57
    CDATABEGIN  décalage et aller à l'état 44
    DONNEES     décalage et aller à l'état 45
    COMMENT     décalage et aller à l'état 17

    element  aller à l'état 46
    misc     aller à l'état 47
    pi       aller à l'état 20
    cdsect   aller à l'état 48


état 56

    3 element: INF NOM attributes SUP content INF SLASH NOM . SUP

    SUP  décalage et aller à l'état 58


état 57

    3 element: INF . NOM attributes SUP content INF SLASH NOM SUP
    4        | INF . XSL COLON NOM attributes SUP content INF SLASH XSL COLON NOM SUP
    4        | INF XSL COLON NOM attributes SUP content INF . SLASH XSL COLON NOM SUP
    5        | INF . XSL COLON NOM attributes SLASH SUP

    SLASH  décalage et aller à l'état 59
    NOM    décalage et aller à l'état 12
    XSL    décalage et aller à l'état 13


état 58

    3 element: INF NOM attributes SUP content INF SLASH NOM SUP .

    $défaut  réduction par utilisation de la règle 3 (element)


état 59

    4 element: INF XSL COLON NOM attributes SUP content INF SLASH . XSL COLON NOM SUP

    XSL  décalage et aller à l'état 60


état 60

    4 element: INF XSL COLON NOM attributes SUP content INF SLASH XSL . COLON NOM SUP

    COLON  décalage et aller à l'état 61


état 61

    4 element: INF XSL COLON NOM attributes SUP content INF SLASH XSL COLON . NOM SUP

    NOM  décalage et aller à l'état 62


état 62

    4 element: INF XSL COLON NOM attributes SUP content INF SLASH XSL COLON NOM . SUP

    SUP  décalage et aller à l'état 63


état 63

    4 element: INF XSL COLON NOM attributes SUP content INF SLASH XSL COLON NOM SUP .

    $défaut  réduction par utilisation de la règle 4 (element)
